[package]
name = "read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-slice = "0.1.4"
positioned-io= "0.2.2"
byteorder =  "1.4.3"
failure = "0.1.8"
custom_debug_derive = "0.5.0"
num_enum = "0.5.7"
